--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </section>
         <!-- Project Front-Ende -->
         <section class="content_Project">
-            <H1>Meus Projetos</H1>
+            <h1>Meus<span> Projetos</span></h1>
             <div class=" Project">
                 <div class="projeto-1">CONTEUDO-Maior</div>
                 <div class="projeto-2">CONTEUDO-Menor</div>
