atulizacão menu-responsivo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/Meus_Serviços.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Meus_Projetos.css">
+    <link rel="stylesheet" href="css/tecnologias.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 
@@ -46,12 +47,12 @@
         <div class="menu">
             <div class="menuResponsivo"></div>
             <ul class="menu-header">
-                <li style="--i:0;"><span>Home</span></li>
-                <li style="--i:1;">About</li>
-                <li style="--i:2;">Portfólio</li>
-                <li style="--i:3;">Blog</li>
-                <li style="--i:4;">Contato</li>
-                <li style="--i:5;"> Social</li>
+                <li style="--i:5;"><span>Home</span></li>
+                <li style="--i:4;">About</li>
+                <li style="--i:3;">Portfólio</li>
+                <li style="--i:2;">Blog</li>
+                <li style="--i:1;">Contato</li>
+                <li style="--i:0;"> Social</li>
             </ul>
         </div>
     </section>
@@ -141,31 +142,9 @@
                 <div class="projeto-5">conteudo 5</div>
             </div>
         </section>
-
-
-        <!-- Project After Effects -->
-
-
-
-
-
-        <!-- Project Figma -->
-
-
-
-
-        <!-- Blog or Articles -->
-
-
-        <!-- Tools and Technologies Used -->
-
-
-        <!-- Videos or Presentations -->
-
-
-        <!-- Projeto Pessoal Atua -->
-
-
+        <section class="tecnologias">
+            <div class="title"><h3>Arte em Código:</h3><p>&nbsp; Revelando as Tecnologias por Trás do Meu Portfólio</p></div>
+        </section>
     </main>
     <footer>
         <!-- Informações de Contato -->
