--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         </section>
         <section class="tecnologias">
             <div class="title"><h3>Arte em Código:</h3><p>&nbsp; Revelando as Tecnologias por Trás do Meu Portfólio</p></div>
+            <div class="content_tecnologias">
+                <div class="card_tecnologia"></div>
+                
+            </div>
         </section>
     </main>
     <footer>
