atulizacão card_teconologias

--- a/index.html
+++ b/index.html
@@ -143,11 +143,98 @@
             </div>
         </section>
         <section class="tecnologias">
-            <div class="title"><h3>Arte em Código:</h3><p>&nbsp; Revelando as Tecnologias por Trás do Meu Portfólio</p></div>
-            <div class="content_tecnologias">
-                <div class="card_tecnologia"></div>
-                
+            <div class="title">
+                <h3>Arte em Código:</h3>
+                <p>&nbsp; Revelando as Tecnologias por Trás do Meu Portfólio</p>
             </div>
+            <div class="content_card_tecnologia">
+                    <div class="card_tecnologia card_js">
+                        <div class="borde_card">
+                            <div class="img_tecnologia">
+                                <img src="img/img_tecnologia/script-java.png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                <defs>
+                                    <linearGradient id="GradientColor_js">
+                                        <stop offset="0%" stop-color="#FF4500" />
+                                        <stop offset="100%" stop-color="#ff8c00" />
+                                    </linearGradient>
+                                </defs>
+                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                            </svg>
+                        </div>
+                        <h3>JavaScript</h3>
+                        <P>JavaScript desempenhou um papel essencial na criação de um portfólio interativo e dinâmico.
+                        </P>
+                        <div class="animet_fundo"></div>
+                    </div>
+                    <!-- ========================segundo car====================== -->
+                    <div class="card_tecnologia card_html">
+                        <div class="borde_card">
+                            <div class="img_tecnologia">
+                                <img src="img/img_tecnologia/html (1).png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                <defs>
+                                    <linearGradient id="GradientColor_html">
+                                        <stop offset="0%" stop-color="#FFC183" />
+                                        <stop offset="100%" stop-color="#E34C26" />
+                                    </linearGradient>
+                                </defs>
+                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                            </svg>
+                        </div>
+                        <h3>HTML</h3>
+                        <P>HTML foi utilizado para estabelecer uma estrutura sólida para o portfólio.
+                        </P>
+                        <div class="animet_fundo"></div>
+                    </div>
+
+                    <!-- ===========================terceiro card==================== -->
+                    <div class="card_tecnologia card_css">
+                        <div class="borde_card">
+                            <div class="img_tecnologia">
+                                <img src="img/img_tecnologia/css.png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                <defs>
+                                    <linearGradient id="GradientColor_css">
+                                        <stop offset="0%" stop-color="#4168a3" />
+                                        <stop offset="100%" stop-color="#264de4" />
+                                    </linearGradient>
+                                </defs>
+                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                            </svg>
+                        </div>
+                        <h3>CSS</h3>
+                        <P>CSS foi empregado na personalização estética do portfólio.
+                        </P>
+                        <div class="animet_fundo"></div>
+                    </div>
+                    <!-- ===========================quarto car ============================= -->
+                    <div class="card_tecnologia card_node">
+
+                        <div class="borde_card">
+                            <div class="img_tecnologia">
+                                <img src="img/img_tecnologia/node-js (2).png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                <defs>
+                                    <linearGradient id="GradientColor_node">
+                                        <stop offset="0%" stop-color="#AED581" />
+                                        <stop offset="100%" stop-color="#8CC84B" />
+                                    </linearGradient>
+                                </defs>
+                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                            </svg>
+                        </div>
+                        <h3>Node.js</h3>
+                        <P>Node.js facilitou a integração eficiente entre o back-end e o front-end do portfólio.
+                        </P>
+                        <div class="animet_fundo"></div>
+                    </div>
+            </div>
+                    
         </section>
     </main>
     <footer>
