--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
                                 <defs>
                                     <linearGradient id="GradientColor_js">
-                                        <stop offset="0%" stop-color="#FF4500" />
-                                        <stop offset="100%" stop-color="#ff8c00" />
+                                        <stop offset="0%" stop-color="#FFECB3" />
+                                        <stop offset="100%" stop-color="#F7DF1E" />
                                     </linearGradient>
                                 </defs>
                                 <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
