finalizacão card_tecnologia

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Meus_Projetos.css">
     <link rel="stylesheet" href="css/tecnologias.css">
+    <link rel="stylesheet" href="css/depoimentos.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 
@@ -145,7 +146,7 @@
         <section class="tecnologias">
             <div class="title">
                 <h3>Arte em Código:</h3>
-                <p>&nbsp; Revelando as Tecnologias por Trás do Meu Portfólio</p>
+                <p>Revelando as Tecnologias por Trás do Meu Portfólio</p>
             </div>
             <div class="content_card_tecnologia">
                     <div class="card_tecnologia card_js">
@@ -164,7 +165,7 @@
                             </svg>
                         </div>
                         <h3>JavaScript</h3>
-                        <P>JavaScript desempenhou um papel essencial na criação de um portfólio interativo e dinâmico.
+                        <P>JavaScript desempenhou a criação de um portfólio interativo e dinâmico.
                         </P>
                         <div class="animet_fundo"></div>
                     </div>
@@ -233,9 +234,9 @@
                         </P>
                         <div class="animet_fundo"></div>
                     </div>
-            </div>
-                    
+            </div>            
         </section>
+        <section class="depoimentos"></section>
     </main>
     <footer>
         <!-- Informações de Contato -->
