atualização card_tecnologia

--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                     </div>
             </div>            
         </section>
-        <section class="depoimentos"></section>
+        <section class="depoimentos">
+            <div class="content_cometarios"></div>
+        </section>
     </main>
     <footer>
         <!-- Informações de Contato -->
