--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/Meus_Projetos.css">
     <link rel="stylesheet" href="css/tecnologias.css">
     <link rel="stylesheet" href="css/depoimentos.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
 
@@ -149,95 +150,155 @@
                 <p>Revelando as Tecnologias por Trás do Meu Portfólio</p>
             </div>
             <div class="content_card_tecnologia">
-                    <div class="card_tecnologia card_js">
-                        <div class="borde_card">
-                            <div class="img_tecnologia">
-                                <img src="img/img_tecnologia/script-java.png" alt="">
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-                                <defs>
-                                    <linearGradient id="GradientColor_js">
-                                        <stop offset="0%" stop-color="#FFECB3" />
-                                        <stop offset="100%" stop-color="#F7DF1E" />
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
-                            </svg>
+                <div class="card_tecnologia card_js">
+                    <div class="borde_card">
+                        <div class="img_tecnologia">
+                            <img src="img/img_tecnologia/script-java.png" alt="">
                         </div>
-                        <h3>JavaScript</h3>
-                        <P>JavaScript desempenhou a criação de um portfólio interativo e dinâmico.
-                        </P>
-                        <div class="animet_fundo"></div>
+                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                            <defs>
+                                <linearGradient id="GradientColor_js">
+                                    <stop offset="0%" stop-color="#FFECB3" />
+                                    <stop offset="100%" stop-color="#F7DF1E" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                        </svg>
                     </div>
-                    <!-- ========================segundo car====================== -->
-                    <div class="card_tecnologia card_html">
-                        <div class="borde_card">
-                            <div class="img_tecnologia">
-                                <img src="img/img_tecnologia/html (1).png" alt="">
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-                                <defs>
-                                    <linearGradient id="GradientColor_html">
-                                        <stop offset="0%" stop-color="#FFC183" />
-                                        <stop offset="100%" stop-color="#E34C26" />
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
-                            </svg>
+                    <h3>JavaScript</h3>
+                    <P>JavaScript desempenhou a criação de um portfólio interativo e dinâmico.
+                    </P>
+                    <div class="animet_fundo"></div>
+                </div>
+                <!-- ========================segundo car====================== -->
+                <div class="card_tecnologia card_html">
+                    <div class="borde_card">
+                        <div class="img_tecnologia">
+                            <img src="img/img_tecnologia/html (1).png" alt="">
                         </div>
-                        <h3>HTML</h3>
-                        <P>HTML foi utilizado para estabelecer uma estrutura sólida para o portfólio.
-                        </P>
-                        <div class="animet_fundo"></div>
+                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                            <defs>
+                                <linearGradient id="GradientColor_html">
+                                    <stop offset="0%" stop-color="#FFC183" />
+                                    <stop offset="100%" stop-color="#E34C26" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                        </svg>
                     </div>
+                    <h3>HTML</h3>
+                    <P>HTML foi utilizado para estabelecer uma estrutura sólida para o portfólio.
+                    </P>
+                    <div class="animet_fundo"></div>
+                </div>
 
-                    <!-- ===========================terceiro card==================== -->
-                    <div class="card_tecnologia card_css">
-                        <div class="borde_card">
-                            <div class="img_tecnologia">
-                                <img src="img/img_tecnologia/css.png" alt="">
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-                                <defs>
-                                    <linearGradient id="GradientColor_css">
-                                        <stop offset="0%" stop-color="#4168a3" />
-                                        <stop offset="100%" stop-color="#264de4" />
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
-                            </svg>
+                <!-- ===========================terceiro card==================== -->
+                <div class="card_tecnologia card_css">
+                    <div class="borde_card">
+                        <div class="img_tecnologia">
+                            <img src="img/img_tecnologia/css.png" alt="">
                         </div>
-                        <h3>CSS</h3>
-                        <P>CSS foi empregado na personalização estética do portfólio.
-                        </P>
-                        <div class="animet_fundo"></div>
+                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                            <defs>
+                                <linearGradient id="GradientColor_css">
+                                    <stop offset="0%" stop-color="#4168a3" />
+                                    <stop offset="100%" stop-color="#264de4" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                        </svg>
                     </div>
-                    <!-- ===========================quarto car ============================= -->
-                    <div class="card_tecnologia card_node">
+                    <h3>CSS</h3>
+                    <P>CSS foi empregado na personalização estética do portfólio.
+                    </P>
+                    <div class="animet_fundo"></div>
+                </div>
+                <!-- ===========================quarto car ============================= -->
+                <div class="card_tecnologia card_node">
 
-                        <div class="borde_card">
-                            <div class="img_tecnologia">
-                                <img src="img/img_tecnologia/node-js (2).png" alt="">
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-                                <defs>
-                                    <linearGradient id="GradientColor_node">
-                                        <stop offset="0%" stop-color="#AED581" />
-                                        <stop offset="100%" stop-color="#8CC84B" />
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
-                            </svg>
+                    <div class="borde_card">
+                        <div class="img_tecnologia">
+                            <img src="img/img_tecnologia/node-js (2).png" alt="">
                         </div>
-                        <h3>Node.js</h3>
-                        <P>Node.js facilitou a integração eficiente entre o back-end e o front-end do portfólio.
-                        </P>
-                        <div class="animet_fundo"></div>
+                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                            <defs>
+                                <linearGradient id="GradientColor_node">
+                                    <stop offset="0%" stop-color="#AED581" />
+                                    <stop offset="100%" stop-color="#8CC84B" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="70" cy="70" r="60" stroke-linecap="round" fill="" />
+                        </svg>
                     </div>
-            </div>            
+                    <h3>Node.js</h3>
+                    <P>Node.js facilitou a integração eficiente entre o back-end e o front-end do portfólio.
+                    </P>
+                    <div class="animet_fundo"></div>
+                </div>
+            </div>
         </section>
         <section class="depoimentos">
-            <div class="content_cometarios"></div>
+
+            <div class="content_cometarios">
+                <h1>Testemunhos</h1>
+
+                <div class="swiper-container">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <div class="text_comentatio">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
+                                    voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
+                                    quam quis quibusdam!</p>
+                                <h4>rennato Machado</h4>
+                            </div>
+                            <div class="use_img">
+                                <img src="img/img_user/imagem-interior-de-alegre-jovem-bonito-tendo-dobrado-as-maos-olhando-diretamente-sorrindo-sinceramente-vestindo-roupas-casuais.jpg"
+                                    alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="text_comentatio">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
+                                    voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
+                                    quam quis quibusdam!</p>
+                                <h4>rennato Machado</h4>
+                            </div>
+                            <div class="use_img">
+                                <img src="img/img_user/imagem-interior-de-alegre-jovem-bonito-tendo-dobrado-as-maos-olhando-diretamente-sorrindo-sinceramente-vestindo-roupas-casuais.jpg"
+                                    alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="text_comentatio">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
+                                    voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
+                                    quam quis quibusdam!</p>
+                                <h4>rennato Machado</h4>
+                            </div>
+                            <div class="use_img">
+                                <img src="img/img_user/imagem-interior-de-alegre-jovem-bonito-tendo-dobrado-as-maos-olhando-diretamente-sorrindo-sinceramente-vestindo-roupas-casuais.jpg"
+                                    alt="">
+                            </div>
+                        </div>
+                        
+                        <!-- Adicione mais slides conforme necessário -->
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+
+            </div>
+            <div class="text_post">
+                <input type="text" placeholder="Deixe seu comentário">
+                <button>comentar</button>
+            </div>
+
         </section>
     </main>
     <footer>
@@ -256,6 +317,23 @@
     </footer>
 
     <script src="meuScript.js"></script>
+    <script src="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+        });
+
+    </script>
+
 
 </body>
 
