finalização da section testemunhos

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="swiper-wrapper">
                         <!-- Slides -->
                         <div class="swiper-slide">
-                            <div class="text_comentatio">
+                            <div class="text_comentario">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
                                     voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
                                     quam quis quibusdam!</p>
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text_comentatio">
+                            <div class="text_comentario">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
                                     voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
                                     quam quis quibusdam!</p>
@@ -271,7 +271,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text_comentatio">
+                            <div class="text_comentario">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis, dolorum
                                     voluptatum omnis eveniet facilis unde laudantium corporis exercitationem? Assumenda
                                     quam quis quibusdam!</p>
@@ -295,7 +295,7 @@
 
             </div>
             <div class="text_post">
-                <input type="text" placeholder="Deixe seu comentário">
+                <input type="text" placeholder="Deixe seu comentário . . .">
                 <button>comentar</button>
             </div>
 
@@ -316,25 +316,8 @@
         <!-- Botão de Volta ao Topo -->
     </footer>
 
-    <script src="meuScript.js"></script>
     <script src="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.js"></script>
-    <script>
-        var swiper = new Swiper('.swiper-container', {
-            slidesPerView: 1,
-            spaceBetween: 10,
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-        });
-
-    </script>
-
-
+    <script src="meuScript.js"></script>
 </body>
 
 </html>
