atualização espaçamento main e header

--- a/index.html
+++ b/index.html
@@ -137,11 +137,43 @@
         <section class="content_Project">
             <h1>Meus<span> Projetos</span></h1>
             <div class=" Project">
-                <div class="projeto-1">CONTEUDO-Maior</div>
-                <div class="projeto-2">CONTEUDO-Menor</div>
-                <div class="projeto-3">conteudo 3</div>
-                <div class="projeto-4">conteudo 4</div>
-                <div class="projeto-5">conteudo 5</div>
+                <div class="projeto-1">
+                    <div>item</div>
+                    <div class="projeto_descricao">
+                        <p>
+                        <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
+                        uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                        </p>
+                    </div>
+                </div>
+                <div class="projeto-2"> <div>item</div>
+                <div class="projeto_descricao">
+                    <p>
+                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
+                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                    </p>
+                </div></div>
+                <div class="projeto-3"> <div>item</div>
+                <div class="projeto_descricao">
+                    <p>
+                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
+                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                    </p>
+                </div></div>
+                <div class="projeto-4"> <div>item</div>
+                <div class="projeto_descricao">
+                    <p>
+                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
+                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                    </p>
+                </div></div>
+                <div class="projeto-5"> <div>item</div>
+                <div class="projeto_descricao">
+                    <p>
+                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
+                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                    </p>
+                </div></div>
             </div>
         </section>
         <section class="tecnologias">
@@ -282,7 +314,7 @@
                                     alt="">
                             </div>
                         </div>
-                        
+
                         <!-- Adicione mais slides conforme necessário -->
                     </div>
                     <!-- If we need pagination -->
