--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Meus_Projetos.css">
     <link rel="stylesheet" href="css/tecnologias.css">
-    <link rel="stylesheet" href="css/depoimentos.css">
+    <link rel="stylesheet" href="css/depoimentos.css"> 
+    <link rel="stylesheet" href="css/contato.css"> 
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
 </head>
@@ -332,20 +334,24 @@
             </div>
 
         </section>
+        <section class="gmail">
+            <h3>Contate-me</h3>
+            <div class="content_mgs_gmail">
+
+            </div>
+
+        </section>
     </main>
     <footer>
-        <!-- Informações de Contato -->
-        <!-- Links para Redes Sociais -->
-        <!-- Copyright e Ano Atual -->
-        <!-- Política de Privacidade e Termos de Serviço: -->
-        <!-- Links Rápidos: -->
-        <!-- Mapa do Site -->
-        <!-- Créditos e Agradecimentos: -->
-        <!-- Newsletter -->
-        <!-- Links Úteis: -->
-        <!-- Versão do Site: -->
-        <!-- Links para Políticas e Informações Legais -->
-        <!-- Botão de Volta ao Topo -->
+        <div class="footer">
+            <ul class="redes_sociais">
+                <li><img src="img/icone_Social/facebook.png" alt=""><p>facebook</p></li>
+                <li><img src="img/icone_Social/github.png" alt=""><p>github</p></li>
+                <li><img src="img/icone_Social/instagram (1).png" alt=""><p>intagram</p></li>
+                <li><img src="img/icone_Social/whatsapp.png" alt=""><p>whatsapp</p></li>
+            </ul>
+        </div>
+        <div class="copyright">&copy;<P>copyright </P><img src="img/icone_Social/pra-cima.png" alt=""></div>
     </footer>
 
     <script src="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.js"></script>
