finalizando layout e responsividade portfolio

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/Meus_Projetos.css">
     <link rel="stylesheet" href="css/tecnologias.css">
-    <link rel="stylesheet" href="css/depoimentos.css"> 
-    <link rel="stylesheet" href="css/contato.css"> 
+    <link rel="stylesheet" href="css/depoimentos.css">
+    <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@10.0.0/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
@@ -51,10 +51,10 @@
         <div class="menu">
             <div class="menuResponsivo"></div>
             <ul class="menu-header">
-                <li style="--i:5;"><span>Home</span></li>
-                <li style="--i:4;">About</li>
-                <li style="--i:3;">Portfólio</li>
-                <li style="--i:2;">Blog</li>
+                <li style="--i:5;">Home</li>
+                <li style="--i:4;">Sobre</li>
+                <li style="--i:3;">Seviços</li>
+                <li style="--i:2;">Projetos</li>
                 <li style="--i:1;">Contato</li>
                 <li style="--i:0;"> Social</li>
             </ul>
@@ -143,39 +143,57 @@
                     <div>item</div>
                     <div class="projeto_descricao">
                         <p>
-                        <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
-                        uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
+                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
+                            interativa. O
+                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            online!
                         </p>
                     </div>
                 </div>
-                <div class="projeto-2"> <div>item</div>
-                <div class="projeto_descricao">
-                    <p>
-                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
-                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
-                    </p>
-                </div></div>
-                <div class="projeto-3"> <div>item</div>
-                <div class="projeto_descricao">
-                    <p>
-                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
-                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
-                    </p>
-                </div></div>
-                <div class="projeto-4"> <div>item</div>
-                <div class="projeto_descricao">
-                    <p>
-                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
-                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
-                    </p>
-                </div></div>
-                <div class="projeto-5"> <div>item</div>
-                <div class="projeto_descricao">
-                    <p>
-                    <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma interativa. O
-                    uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades online!
-                    </p>
-                </div></div>
+                <div class="projeto-2">
+                    <div>item</div>
+                    <div class="projeto_descricao">
+                        <p>
+                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
+                            interativa. O
+                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            online!
+                        </p>
+                    </div>
+                </div>
+                <div class="projeto-3">
+                    <div>item</div>
+                    <div class="projeto_descricao">
+                        <p>
+                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
+                            interativa. O
+                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            online!
+                        </p>
+                    </div>
+                </div>
+                <div class="projeto-4">
+                    <div>item</div>
+                    <div class="projeto_descricao">
+                        <p>
+                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
+                            interativa. O
+                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            online!
+                        </p>
+                    </div>
+                </div>
+                <div class="projeto-5">
+                    <div>item</div>
+                    <div class="projeto_descricao">
+                        <p>
+                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
+                            interativa. O
+                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            online!
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="tecnologias">
@@ -335,9 +353,15 @@
 
         </section>
         <section class="gmail">
-            <h3>Contate-me</h3>
-            <div class="content_mgs_gmail">
+            <div class="content_form">
+                <form action="" class="form">
+                    <h2>Contate-me</h2>
 
+                    <input type="text" placeholder="Nome completo">
+                    <input type="text" placeholder="gmail">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button>enviar</button>
+                </form>
             </div>
 
         </section>
@@ -345,10 +369,18 @@
     <footer>
         <div class="footer">
             <ul class="redes_sociais">
-                <li><img src="img/icone_Social/facebook.png" alt=""><p>facebook</p></li>
-                <li><img src="img/icone_Social/github.png" alt=""><p>github</p></li>
-                <li><img src="img/icone_Social/instagram (1).png" alt=""><p>intagram</p></li>
-                <li><img src="img/icone_Social/whatsapp.png" alt=""><p>whatsapp</p></li>
+                <li><img src="img/icone_Social/facebook.png" alt="">
+                    <p>facebook</p>
+                </li>
+                <li><img src="img/icone_Social/github.png" alt="">
+                    <p>github</p>
+                </li>
+                <li><img src="img/icone_Social/instagram (1).png" alt="">
+                    <p>intagram</p>
+                </li>
+                <li><img src="img/icone_Social/whatsapp.png" alt="">
+                    <p>whatsapp</p>
+                </li>
             </ul>
         </div>
         <div class="copyright">&copy;<P>copyright </P><img src="img/icone_Social/pra-cima.png" alt=""></div>
