reduçao de codigos css

--- a/index.html
+++ b/index.html
@@ -112,18 +112,17 @@
                     <div class="card_item">
                         <div class="img_card"><img src="img/Design in the browser.jpeg" alt=""></div>
                         <div class="card_description">
-                            <h3>Motion Desingner</h3>
-                            <p>O motion designer é um especialista em animações visuais, utilizando habilidades de
-                                design gráfico para criar movimento envolvente em vídeos e conteúdo digital.</p>
+                            <h3>Web designer</h3>
+                            <p>Web design é a criação visual de páginas da web, focando na estética, usabilidade e responsividade para proporcionar uma experiência online intuitiva e atraente.
+                            </p>
                         </div>
                     </div>
                     <!-- ================================================= -->
                     <div class="card_item">
                         <div class="img_card"><img src="img/Design in the browser.jpeg" alt=""></div>
                         <div class="card_description">
-                            <h3>Motion Desingner</h3>
-                            <p>O motion designer é um especialista em animações visuais, utilizando habilidades de
-                                design gráfico para criar movimento envolvente em vídeos e conteúdo digital.</p>
+                            <h3>Front-End</h3>
+                            <p>Front-end cria a interface visível em sites, usando HTML, CSS e JavaScript para garantir interatividade e usabilidade.</p>
                         </div>
                     </div>
 
@@ -135,7 +134,11 @@
             <h1>Meus<span> Projetos</span></h1>
             <div class=" Project">
                 <div class="projeto-1">
-                    <div>item</div>
+                    <div class="content_link_projeto">
+                        <div class="abri_Pagina"><span>Abri projeto</span></div>
+                        <div class="abri_github"><span>Abri Github</span></div>
+
+                    </div>
                     <div class="projeto_descricao">
                         <p>
                             <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
@@ -146,7 +149,11 @@
                     </div>
                 </div>
                 <div class="projeto-2">
-                    <div>item</div>
+                    <div class="content_link_projeto">
+                        <div class="abri_Pagina"><span>Abri projeto</span></div>
+                        <div class="abri_github"><span>Abri Github</span></div>
+
+                    </div>
                     <div class="projeto_descricao">
                         <p>
                             <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
@@ -157,7 +164,11 @@
                     </div>
                 </div>
                 <div class="projeto-3">
-                    <div>item</div>
+                    <div class="content_link_projeto">
+                        <div class="abri_Pagina"><span>Abri projeto</span></div>
+                        <div class="abri_github"><span>Abri Github</span></div>
+
+                    </div>
                     <div class="projeto_descricao">
                         <p>
                             <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
@@ -168,7 +179,11 @@
                     </div>
                 </div>
                 <div class="projeto-4">
-                    <div>item</div>
+                    <div class="content_link_projeto">
+                        <div class="abri_Pagina"><span>Abri projeto</span></div>
+                        <div class="abri_github"><span>Abri Github</span></div>
+
+                    </div>
                     <div class="projeto_descricao">
                         <p>
                             <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
@@ -179,7 +194,11 @@
                     </div>
                 </div>
                 <div class="projeto-5">
-                    <div>item</div>
+                    <div class="content_link_projeto">
+                        <div class="abri_Pagina"><span>Abri projeto</span></div>
+                        <div class="abri_github"><span>Abri Github</span></div>
+
+                    </div>
                     <div class="projeto_descricao">
                         <p>
                             <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
@@ -352,7 +371,7 @@
                 <form action="" class="form">
                     <h2>Contate-me</h2>
                     <input type="text" placeholder="Nome completo">
-                    <input type="text" placeholder="Email">
+                    <input type="email" placeholder="Email">
                     <textarea name="" id="" cols="30" rows="10"></textarea>
                     <button>enviar</button>
                 </form>
