atualização lergendas porjetos

--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
                     </div>
                     <div class="projeto_descricao">
                         <p>
-                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
-                            interativa. O
-                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
-                            online!
+                            <b>Menu</b>, animado em HTML, CSS e JavaScript: design atraente, animações suaves e navegação intuitiva para uma experiência moderna.
                         </p>
                     </div>
                 </div>
@@ -171,9 +168,7 @@
                     </div>
                     <div class="projeto_descricao">
                         <p>
-                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
-                            interativa. O
-                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
+                            <b>Menu</b>, lateral responsivo em HTML, CSS e JavaScript: design flexível e navegação intuitiva para uma experiência moderna em qualquer dispositivo.
                             online!
                         </p>
                     </div>
@@ -186,10 +181,7 @@
                     </div>
                     <div class="projeto_descricao">
                         <p>
-                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
-                            interativa. O
-                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
-                            online!
+                            <b>Adobe AF</b>, Animação cativante feita no After Effects: fluidez visual, transições impactantes e design dinâmico para uma experiência envolvente.
                         </p>
                     </div>
                 </div>
@@ -201,10 +193,7 @@
                     </div>
                     <div class="projeto_descricao">
                         <p>
-                            <b>Portfólio</b>, criado com HTML, CSS e JavaScript, destaca meus projetos de forma
-                            interativa. O
-                            uso do Node.js proporciona funcionalidades dinâmicas. Confira meu trabalho e habilidades
-                            online!
+                            <b>Figma</b>, Cardápio digital:Layout atrativo, navegação intuitiva e detalhes visuais que elevam a experiência do usuário.
                         </p>
                     </div>
                 </div>
